<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CertificadoActivity">

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:text="@string/tela_certificado"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_gerar_certificado_whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/certificado_whats" />

            <Button
                android:id="@+id/btn_gerar_certificado_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/certificado_face" />

            <Button
                android:id="@+id/btn_gerar_certificado_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/certificado_twitter" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>