<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="37dp">

        <TextView
            android:id="@+id/P"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_parabens"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/P2"
            android:layout_width="319dp"
            android:layout_height="69dp"
            android:text="@string/juntar_ursal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/P3"
            android:layout_width="319dp"
            android:layout_height="122dp"
            android:text="@string/final_parte2"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/btn_questionario"
            android:layout_width="match_parent"
            android:layout_height="209dp"
            android:text="Responder Questionário" />

        <Button
            android:id="@+id/btn_fascista"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="me conformo como as coisas estão" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>