<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionarioActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="294dp"
        android:layout_height="641dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:text="@string/perguntas"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pergunta2"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="16dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stalin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/karl" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lenin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maria" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pergunta3"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="16dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="107dp">

            <RadioButton
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stalin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/karl" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lenin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maria" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pergunta1"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="16dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="107dp">

            <RadioButton
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stalin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/karl" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lenin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maria" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pergunta4"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="16dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="107dp">

            <RadioButton
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stalin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/karl" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lenin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maria" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pergunta1"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="16dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="107dp">

            <RadioButton
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stalin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/karl" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lenin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maria" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pergunta5"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="16dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="107dp">

            <RadioButton
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stalin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/karl" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lenin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maria" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pergunta1"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="16dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="107dp">

            <RadioButton
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stalin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/karl" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lenin" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maria" />
        </RadioGroup>

    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>